--- a/apps/ticketing-service/package.json
+++ b/apps/ticketing-service/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ticketing-service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"version": "1.0.0",
+"main": "src/index.ts",
+"scripts": {
+"dev": "ts-node -r tsconfig-paths/register src/index.ts",
+"start": "node dist/index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
